# bookshop

./: CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml  init.sql  overview.drawio
.github/workflows/: admin.yaml  ci.sh  ci.yaml  codeql.yml  iam.yaml
admin/: .dockerignore  Dockerfile  angular.json  eslint.config.js  karma.conf.js  package.json  pnpm-lock.yaml  server.ts
admin/src/: index.html  main.server.ts  main.ts  styles.scss
admin/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.server.ts  app.config.ts  app.routes.ts
admin/src/app/icons/: logo.ts  (+2 more)
api/: Dockerfile  pom.xml
cms/: Dockerfile  pom.xml
iam/: .env  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
iam/constants/: const.go
iam/db/: db.go  redis.go
iam/docs/: docs.go  swagger.json  swagger.yaml
iam/dto/: auth.go  dto.go  response.go
iam/handlers/: auth_handler.go  handler.go  shop_handler.go
iam/kafka/: producer.go
iam/logging/: init.go
iam/middleware/: error_handler.go  validate_request.go
iam/models/: account.go  account_info.go  initialize.go  role.go
iam/routes/: router.go
iam/services/: auth_service.go
iam/utils/: hash.go  hash_test.go  jwt.go  jwt_test.go  validate_input.go  validate_input_test.go
notify/: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
notify/app/: __init__.py  config.py  consumer.py  email_sender.py
notify/email_template/: activate_new_staff.html
notify/test/: __init__.py  test_consumer.py  test_email_sender.py
shop/: package-lock.json  package.json
(+137 files in other folders)
