[tool.poetry]
name = "notify"
version = "0.1.0"
description = ""
authors = ["halng <haonguyentan2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.6.1"
black = "^24.10.0"
loguru = "^0.7.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
